--- a/package.json
+++ b/package.json
@@ -2,5 +2,16 @@
   "name": "git-brancheetos",
   "description": "Automate your release pull requests. Enjoy your brancheetos 🌶️🧀",
   "private": true,
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@3.6.1",
+  "type": "module",
+  "main": "index.js",
+  "bin": "index.js",
+  "devDependencies": {
+    "prettier": "2.8.8"
+  },
+  "dependencies": {
+    "env-paths": "3.0.0",
+    "git-remote-origin-url": "4.0.0",
+    "lodash": "4.17.21"
+  }
 }
