--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "2.8.8"
   },
   "dependencies": {
+    "@octokit/rest": "20.0.1",
     "env-paths": "3.0.0",
     "git-remote-origin-url": "4.0.0",
     "lodash": "4.17.21"
