--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prettier": "2.8.8"
   },
   "dependencies": {
+    "@inquirer/input": "1.2.5",
+    "@inquirer/select": "1.2.5",
     "@octokit/rest": "20.0.1",
     "env-paths": "3.0.0",
     "git-remote-origin-url": "4.0.0",
