--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,22 +12,21 @@ jobs:
     if: ${{ startsWith(github.head_ref, 'release-') && github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-      - uses: JS-DevTools/npm-publish@v2
+      - id: publish
+        uses: JS-DevTools/npm-publish@v2
         with:
           token: ${{ secrets.NPM_TOKEN }}
 
-      - name: Get release version
+      - if: ${{ steps.publish.outputs.type }}
+        name: Get release version
         uses: xom9ikk/split@v1.1
         id: split
         with:
           string: ${{ github.head_ref }}
           separator: 'release-'
 
-      - name: Create tag and release
+      - if: ${{ steps.publish.outputs.type }}
+        name: Create tag and release
         uses: softprops/action-gh-release@v1
         with:
           name: ${{ steps.split.outputs._1 }}
