--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "git-brancheetos",
   "version": "1.2.1",
-  "description": "Automate your release pull requests. Enjoy your brancheetos 🌶️🧀",
+  "description": "CLI tool to make your release pull requests consistent. Enjoy your brancheetos 🌶️🧀",
   "keywords": [
     "git",
     "github",
