Upgrade inquirer packages

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "prettier": "2.8.8"
   },
   "dependencies": {
-    "@inquirer/input": "1.2.5",
-    "@inquirer/select": "1.2.5",
+    "@inquirer/prompts": "8.1.0",
     "commander": "11.0.0",
     "env-paths": "3.0.0",
     "git-remote-origin-url": "4.0.0",
