--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@inquirer/prompts": "8.1.0",
     "commander": "11.0.0",
     "env-paths": "3.0.0",
-    "git-remote-origin-url": "4.0.0",
-    "lodash": "4.17.21"
+    "es-toolkit": "1.43.0",
+    "git-remote-origin-url": "4.0.0"
   }
 }
